# education-data-analysis

./: .gitignore  README.md  pyproject.toml
notebooks/: code.ipynb  code_valide.ipynb  eda copy.ipynb
