[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "analysez-les-donnees-de-systemes-educatifs"
version = "0.1.0"
description = """
Exercice d’analyse exploratoire pour academy, une start-up EdTech\
proposant des contenus de formation en ligne pour lycéens et universitaires.\
Mission : étudier les données de la Banque mondiale pour guider le projet\
d’expansion internationale confié par Mark.
"""
authors = [name = "Axelle Rolain"]

dependencies = [
  "pandas>=1.5",
  "numpy>=1.23",
  "missingno>=0.5",
  "matplotlib>=3.5",
  "seaborn>=0.12",
  "pycountry>=22.3",
  "geopandas>=0.12",
  "scipy>=1.9"
]
